Reintegrated Audio Manager with new URI format - so to ultimately work with DIGITABLE. Audio Sources haven't been added yet, so if you get an error there, just comment out where the sound is used. We'll have to remember to place them back in later.

--- a/WizardWarzRotW/MainWindow.xaml
+++ b/WizardWarzRotW/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindowXAML" Height="auto" Width="auto" >
     <Canvas Name="GameCANVAS" Height="Auto" Width="Auto">
+        <local:AudioManager x:Name="AudioMan"/>
         <local:TitleScreen />
         <local:MainMenu />
         <local:GameBoard />
