--- a/WizardWarzRotW/PlayerControl.xaml
+++ b/WizardWarzRotW/PlayerControl.xaml
@@ -5,8 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WizardWarzRotW"
              mc:Ignorable="d" 
+             
              d:DesignHeight="300" d:DesignWidth="300" PreviewTouchDown="UserControl_PreviewTouchDown" PreviewTouchUp="UserControl_PreviewTouchUp" PreviewTouchMove="UserControl_PreviewTouchMove">
-    <Grid>
+    <Canvas x:Name="myCanvas">
+        
+    </Canvas>
             
-    </Grid>
 </UserControl>
