--- a/WizardWarzRotW/MainMenu.xaml
+++ b/WizardWarzRotW/MainMenu.xaml
@@ -5,8 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WizardWarzRotW"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="1080" d:DesignWidth="1080">
     <Grid>
-            
+        <Label x:Name="label" Content="Number of Players" Height="128" Width="542" FontSize="64" Margin="270,210,275,740"/>
+        <Button x:Name="FourPlayerButton" Content="4" Width="256" Height="64" FontSize="32" PreviewTouchDown="FourPlayer_PreviewTouchDown" Margin="410,515,410,500"/>
+        <Button x:Name="SixPlayerButton" Content="6" Width="256" Height="64" FontSize="32" PreviewTouchDown="SixPlayer_PreviewTouchDown" Margin="410,815,410,200"/>
     </Grid>
 </UserControl>
