--- a/WizardWarzRotW/LivesAndScore.xaml
+++ b/WizardWarzRotW/LivesAndScore.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WizardWarzRotW"
              mc:Ignorable="d" 
-             d:DesignHeight="64" d:DesignWidth="384">
+             Name="element" d:DesignHeight="64" d:DesignWidth="384">
     <Grid Name="display">
         <StackPanel Orientation="Horizontal">
             <Grid Name="livesGrid" VerticalAlignment="Center" HorizontalAlignment="Left">
