--- a/WizardWarzRotW/MainWindow.xaml
+++ b/WizardWarzRotW/MainWindow.xaml
@@ -8,5 +8,9 @@
         Title="MainWindowXAML" Height="auto" Width="auto" >
     <Canvas Name="GameCANVAS" Height="Auto" Width="Auto">
         <local:AudioManager x:Name="AudioMan"/>
+        <local:TitleScreen x:Name="TitleScreenInstance" Visibility="Hidden"/>
+        <local:MainMenu x:Name="MainMenuInstance" Visibility="Hidden"/>
+        <local:GameBoard x:Name="GameInstance" Visibility="Hidden"/>
+        <local:EndScreen x:Name="EndScreenInstance" Visibility="Hidden"/>
     </Canvas>
 </Window>
