General cleanup - removing unused images. Changed superbomb pickup to similar to Ben's design, and changed dropped (explode) bomb to Ben's design with sparks. Changed the start up size of both title screen and main menu. Too large for tablet screen - can change back for digitable.

--- a/WizardWarzRotW/MainWindow.xaml
+++ b/WizardWarzRotW/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WizardWarzRotW"
         mc:Ignorable="d"
-        Title="MainWindowXAML" Height="auto" Width="auto" >
+        Title="MainWindowXAML" Height="Auto" Width="Auto" >
     <Canvas Name="GameCANVAS" Height="Auto" Width="Auto">
         <local:AudioManager x:Name="AudioMan"/>
         <local:TitleScreen x:Name="TitleScreenInstance" Visibility="Hidden"/>
