--- a/WizardWarzRotW/MainMenu.xaml
+++ b/WizardWarzRotW/MainMenu.xaml
@@ -5,11 +5,12 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WizardWarzRotW"
              mc:Ignorable="d" 
-             d:DesignHeight="1080" d:DesignWidth="1080">
+             d:DesignHeight="540" d:DesignWidth="540">
     <Grid Background="#FF892A2A">
-        <Label x:Name="label" Content="Number of Players" Height="128" Width="542" FontSize="64" Margin="270,210,275,740"/>
-        <Button x:Name="FourPlayerButton" Content="4" Width="256" Height="64" FontSize="32" PreviewMouseDown="FourPlayerButton_PreviewMouseDown" PreviewTouchDown="FourPlayerButton_PreviewTouchDown" Margin="410,515,410,500"/>
-        <Button x:Name="SixPlayerButton" Content="6" Width="256" Height="64" FontSize="32" PreviewMouseDown="SixPlayerButton_PreviewMouseDown" PreviewTouchDown="SixPlayerButton_PreviewTouchDown" Margin="410,815,410,200"/>
-        <Image HorizontalAlignment="Left" Height="100" Margin="500,621,0,0" VerticalAlignment="Top" Width="100" Source="Resources/audio.png" Stretch="Fill" PreviewTouchDown="Image_PreviewTouchDown"/>
+        <Label x:Name="label" Content="Number of Players" Height="64" FontSize="32
+               " Margin="142,42,117,434"  />
+        <Button x:Name="FourPlayerButton" Content="4" Width="256" Height="64" FontSize="32" PreviewMouseDown="FourPlayerButton_PreviewMouseDown" PreviewTouchDown="FourPlayerButton_PreviewTouchDown" Margin="142,198,142,278" />
+        <Button x:Name="SixPlayerButton" Content="6" Width="256" Height="64" FontSize="32" PreviewMouseDown="SixPlayerButton_PreviewMouseDown" PreviewTouchDown="SixPlayerButton_PreviewTouchDown" Margin="142,354,142,122"  />
+        <Image HorizontalAlignment="Left" Height="67"  VerticalAlignment="Top" Width="63" Source="Resources/audio.png" Stretch="Fill" PreviewTouchDown="Image_PreviewTouchDown" Margin="477,0,0,0"/>
     </Grid>
 </UserControl>
