--- a/WizardWarzRotW/TitleScreen.xaml
+++ b/WizardWarzRotW/TitleScreen.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:WizardWarzRotW"
              mc:Ignorable="d" 
              d:DesignHeight="540" d:DesignWidth="540">
-    <Grid Name="TitleGrid" Background="#FF892A2A" PreviewTouchDown="TitleScreen_PreviewTouchDown" PreviewMouseDown="TitleGrid_PreviewMouseDown" Width="540" Height="540">
+    <Grid Name="TitleGrid" Background="Black" PreviewTouchDown="TitleScreen_PreviewTouchDown" PreviewMouseDown="TitleGrid_PreviewMouseDown" Width="540" Height="540">
         <Image Name="wizard1" HorizontalAlignment="Center" VerticalAlignment="Center" Width="64" Height="64" Margin="182,214,834,802" 
                 Source="Resources/WIZARD1.png" Stretch="Fill"/>
         <Image Name="wizard2" HorizontalAlignment="Center" VerticalAlignment="Center" Width="64" Height="64" Margin="889,116,127,900" 
@@ -18,8 +18,13 @@
         <Image Name="wizard4" HorizontalAlignment="Center" VerticalAlignment="Center" Width="64" Height="64" Margin="136,784,880,232" 
                 Source="Resources/WIZARD1.png" Stretch="Fill">
         </Image>
-        <Image Name="wizardText" HorizontalAlignment="Center" VerticalAlignment="Center" Width="605" Height="299" Margin="0,0,0,0" 
-                Source="Resources/WizardWarzText1.png" Stretch="Fill" Canvas.Left="238" Canvas.Top="390">
-        </Image>
+        <Image HorizontalAlignment="Left" Height="75" Margin="115,15,0,0" VerticalAlignment="Top" Width="293" Source="Resources/Wizard .png" Stretch="Fill"/>
+        <Image HorizontalAlignment="Left" Height="66" Margin="142,95,0,0" VerticalAlignment="Top" Width="251" Source="Resources/Warz.png"/>
+        <Image HorizontalAlignment="Left" Height="100" Margin="27,211,0,0" VerticalAlignment="Top" Width="100" Source="Resources/PlayerRight1.png"/>
+        <Image HorizontalAlignment="Left" Height="100" Margin="405,211,0,0" VerticalAlignment="Top" Width="100" Source="Resources/PlayerLeft1.png"/>
+        <Image HorizontalAlignment="Left" Height="30" Margin="127,254,0,0" VerticalAlignment="Top" Width="92" Source="Resources/BallOfMagic.png" Stretch="Fill"/>
+        <Image HorizontalAlignment="Left" Height="36" Margin="192,356,0,0" VerticalAlignment="Top" Width="176" Source="Resources/Start.png" Stretch="Fill"/>
+        <Image HorizontalAlignment="Left" Height="19" Margin="206,434,0,0" VerticalAlignment="Top" Width="150" Source="Resources/Quit.png" Stretch="Fill"/>
+        <Image HorizontalAlignment="Left" Height="36" Margin="142,494,0,0" VerticalAlignment="Top" Width="253" Source="Resources/nsquared.png" Stretch="Fill"/>
     </Grid>
 </UserControl>
