--- a/WizardWarzRotW/MainWindow.xaml
+++ b/WizardWarzRotW/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:WizardWarzRotW"
         mc:Ignorable="d"
         Title="MainWindowXAML" Height="Auto" Width="Auto" >
-    <Canvas Name="GameCANVAS" Height="Auto" Width="Auto">
+    <Canvas Name="GameCANVAS" Height="Auto" Width="Auto" Background="#FF0B0B0B">
         <local:AudioManager x:Name="AudioMan"/>
         <local:TitleScreen x:Name="TitleScreenInstance" Visibility="Hidden"/>
         <local:MainMenu x:Name="MainMenuInstance" Visibility="Hidden"/>
