--- a/WizardWarzRotW/ExplosionRadiusControl.xaml
+++ b/WizardWarzRotW/ExplosionRadiusControl.xaml
@@ -1,14 +1,12 @@
-﻿<UserControl x:Class="WizardWarzRotW.PlayerControl"
+﻿<UserControl x:Class="WizardWarzRotW.ExplosionRadiusControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WizardWarzRotW"
              mc:Ignorable="d" 
-             
-             d:DesignHeight="300" d:DesignWidth="300" MaxWidth="64" MaxHeight="64" PreviewTouchDown="UserControl_PreviewTouchDown" PreviewTouchUp="UserControl_PreviewTouchUp" PreviewTouchMove="UserControl_PreviewTouchMove">
-    <Canvas x:Name="myCanvas" >
-        
-    </Canvas>
+             d:DesignHeight="300" d:DesignWidth="300">
+    <Canvas Name="myERCanvas" MaxHeight="64" MaxWidth="64">
             
+    </Canvas>
 </UserControl>
